--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -83,9 +83,9 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 
 <?php
 $time_start = microtime(true);
-     $this->comments = $modelInfo->getLatestComments(5, $this->cat_id);
+     $this->comments = $modelInfo->getLatestComments(5, $this->cat_id, $this->package_type);
      //$donations = $modelInfo->getLatestPlings(5, $this->cat_id);
-     $topprods = $modelInfo->getMostDownloaded(100, $this->cat_id);
+     $topprods = $modelInfo->getMostDownloaded(100, $this->cat_id, $this->package_type);
      $asidehide = '';
      if(!$this->catabout && count($this->comments)==0  && count($topprods)==0 )
      {
