--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -183,7 +183,7 @@ header div.container.header {
     font-family: Source Sans Pro,Source Sans,sans-serif !important;
   }
 
-  .hp-section {
+  .section {
     padding: 20px 0;
     // background-image: url('../img/hp-section-bg.png');
 
