--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -156,6 +156,16 @@ header div.container.header {
   }
 }
 
+.explore-products-container {
+  .products-showcase {
+    .products-container {
+      .square {
+        width: 25%;
+      }
+    }
+  }
+}
+
 #app-root {
   font-family: Source Sans Pro,Source Sans,sans-serif;
   font-size: 13pt;
@@ -271,14 +281,31 @@ header div.container.header {
       }
     }
   }
+  .explore-products-container {
+    .products-showcase {
+      .products-container {
+        .square {
+          width: 25%;
+        }
+      }
+    }
+  }
 }
-
 
 @media (max-width: 1250px) and (min-width: 1000px) {
   .products-showcase {
     .products-container {
       .square {
         width: 25%;
+      }
+    }
+  }
+  .explore-products-container {
+    .products-showcase {
+      .products-container {
+        .square {
+          width: 33.3333%;
+        }
       }
     }
   }
@@ -297,6 +324,15 @@ header div.container.header {
       }
     }
   }
+  .explore-products-container {
+    .products-showcase {
+      .products-container {
+        .square {
+          width: 50%;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 661px) {
@@ -309,6 +345,15 @@ header div.container.header {
     .products-container {
       .square {
         width: 50%;
+      }
+    }
+  }
+  .explore-products-container {
+    .products-showcase {
+      .products-container {
+        .square {
+          width: 100%;
+        }
       }
     }
   }
