--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -113,6 +113,9 @@
 	{
 		>ul.dropdown-menu{
 			 min-width: 100%;
+			 max-height: 250px;
+			 overflow-y:auto;
+			 overflow-x:hidden;
 			 > li{
 			 	a {
 					    position: relative;
