--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -289,6 +289,44 @@ header div.container.header {
   }
 }
 
+#explore-page {
+
+  .sidebar-container {
+    padding-right: 15px;
+
+    aside.explore-sidebar {
+      background: rgba(0,0,0,.03);
+      padding: 5px 15px;
+
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+
+        li {
+
+          a {
+            width: 100%;
+            float: left;
+            height: 25px;
+          }
+
+          ul {
+            border-left: 2px solid #ccc;
+            padding-left: 15px;
+            float: left;
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  .main-content {
+    padding-left: 15px;
+  }
+}
+
 @media (min-width: 1920px) {
   #app-root {
     .container {
