--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -296,12 +296,12 @@ header div.container.header {
 
     aside.explore-sidebar {
       background: rgba(0,0,0,.03);
-      padding: 15px;
+      padding: 15px 0;
       overflow: auto;
 
       ul {
         margin: 0;
-        padding: 0;
+        padding: 0 10px;
         list-style-type: none;
         float: left;
         width: 100%;
@@ -314,6 +314,7 @@ header div.container.header {
             width: 100%;
             float: left;
             height: 25px;
+            padding: 0 5px;
             background-color: transparent;
             .transition();
 
@@ -331,12 +332,12 @@ header div.container.header {
             &.active {
               background-color: #60bcff;
               color: white;
-              
+
             }
           }
           ul {
             border-left: 2px solid #ccc;
-            padding-left: 15px;
+            padding:0;
           }
         }
       }
