explore page top bar link config

--- a/application/modules/default/views/scripts/explore/index-new.phtml
+++ b/application/modules/default/views/scripts/explore/index-new.phtml
@@ -51,6 +51,7 @@
     $js_topprods =$this->topprods;
     $js_comments = $this->commentsJson;
     $js_categries = $this->categoriesJson;
+    $js_dataCateogry = $this->dataCategory;
   ?>
 
   var products = <?php echo $js_products ?>;
