explore sidebar & topbar

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -292,7 +292,7 @@ header div.container.header {
 #explore-page {
 
   .sidebar-container {
-    padding-right: 15px;
+    padding-right: 0;
 
     aside.explore-sidebar {
       background: rgba(0,0,0,.03);
