explore right sidebar news & blogposts

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -299,6 +299,24 @@ header div.container.header {
   .right-sidebar-container {
     width: 20%;
     float: right;
+
+    .ers-section {
+      float: left;
+      width: 100%;
+      padding: 0 10px;
+
+      img#download-app {
+        max-width: 100%;
+      }
+
+      .sidebar-feed-container {
+        ul {
+          padding: 0;
+          margin: 0;
+          list-style-type: none;
+        }
+      }
+    }
   }
 
   .left-sidebar-container {
