explore sidebar right continue

--- a/application/modules/default/views/scripts/explore/index-new.phtml
+++ b/application/modules/default/views/scripts/explore/index-new.phtml
@@ -61,6 +61,7 @@
   var topProducts = <?php echo $js_topprods ?>;
   var comments = <?php echo $js_comments ?>;
   console.log(topProducts);
+  console.log(comments);
   var view = "explore";
 
 </script>
