--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -303,7 +303,7 @@ header div.container.header {
     .ers-section {
       float: left;
       width: 100%;
-      padding: 0 10px;
+      padding: 10px;
 
       img#download-app {
         max-width: 100%;
