--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -104,7 +104,7 @@
     TopGames:<?php echo $js_topGames ?>,
     TopApps:<?php echo $js_topApps ?>
   };
-
+  var filters = {};
   var view = "home";
 
 </script>
