explore sidebar right sidebar style elements

--- a/application/modules/default/views/scripts/explore/index-new.phtml
+++ b/application/modules/default/views/scripts/explore/index-new.phtml
@@ -52,6 +52,7 @@
     $js_supporters = $this->supporters;
     $js_topprods =$this->topprodsJson;
     $js_comments = $this->commentsJson;
+    $js_supporters = $this->supporters;
   ?>
 
   var categories = <?php echo $js_categries ?>;
