--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -310,10 +310,71 @@ header div.container.header {
       }
 
       .sidebar-feed-container {
+        background: rgba(0,0,0,.03);
+        padding: 10px;
+
         ul {
           padding: 0;
           margin: 0;
           list-style-type: none;
+        }
+
+        ol {
+          margin: 0;
+          padding-left: 25px;
+          background-color: white;
+
+          li {
+            padding-left: 45px;
+            position: relative;
+
+            img {
+              position: absolute;
+              left: 3px;
+              top: 3px;
+            }
+          }
+        }
+
+        ul, ol {
+          border: 1px solid #ccc;
+
+          li {
+            padding: 5px;
+            background-color: white;
+
+            .cm-userinfo {
+              float: right;
+              width: 50px;
+              text-align: center;
+
+              img {
+                width: 50px;
+              }
+            }
+
+            .title, .info-row {
+              display: block;
+              width: 100%;
+            }
+            .info-row {
+              overflow: auto;
+
+              span {
+                float: left;
+                display: inline-block;
+                font-size: 12px;
+
+                &.comment-counter {
+                  float: right;
+                }
+              }
+            }
+          }
+
+          li + li {
+            border-top:1px solid #ccc;
+          }
         }
       }
     }
