--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -260,6 +260,7 @@ header div.container.header {
     h3 {
       font-size: 28px;
       margin-bottom: 10px;
+      height: 40px; 
     }
 
     &:nth-child(even){
