--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -260,7 +260,7 @@ header div.container.header {
     h3 {
       font-size: 28px;
       margin-bottom: 10px;
-      height: 40px; 
+      height: 40px;
     }
 
     &:nth-child(even){
@@ -480,7 +480,7 @@ header div.container.header {
 
   .main-content {
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 0;
   }
 
 }
@@ -529,6 +529,19 @@ header div.container.header {
       }
     }
   }
+
+  #explore-page {
+    .main-content-container {
+      width: 75%;
+      float: left;
+    }
+
+    .right-sidebar-container {
+      width: 25%;
+      float: right;
+    }
+  }
+
 }
 
 @media (max-width: 999px) and (min-width: 662px) {
@@ -553,6 +566,19 @@ header div.container.header {
       }
     }
   }
+
+  #explore-page {
+    .main-content-container {
+      width: 75%;
+      float: left;
+    }
+
+    .right-sidebar-container {
+      width: 25%;
+      float: right;
+    }
+  }
+
 }
 
 @media (max-width: 661px) {
@@ -577,6 +603,19 @@ header div.container.header {
       }
     }
   }
+
+  #explore-page {
+    .main-content-container {
+      width: 75%;
+      float: left;
+    }
+
+    .right-sidebar-container {
+      width: 25%;
+      float: right;
+    }
+  }
+
 }
 
 @media (max-width: 401px) {
@@ -592,4 +631,17 @@ header div.container.header {
       }
     }
   }
+
+  #explore-page {
+    .main-content-container {
+      width: 100%;
+      float: left;
+    }
+
+    .right-sidebar-container {
+      width: 100%;
+      float: right;
+    }
+  }
+
 }
