--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -359,6 +359,11 @@ header div.container.header {
       width: 100%;
       padding: 10px;
 
+      h3 {
+        font-size: 20px;
+        font-weight: 500; 
+      }
+
       img#download-app {
         max-width: 100%;
       }
