explore layot fix (flathub)

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -11,7 +11,7 @@ header div.container.header {
   .products-container {
 
     .square {
-      width: 14.28571%;      
+      width: 14.28571%;
       position: relative;
       float: left;
       margin-bottom: 15px;
@@ -344,11 +344,13 @@ header div.container.header {
 }
 
 #explore-page {
-
+  padding: 20px;
   .main-content-container {
     //width: 80%;
     width: 100%;
     float: left;
+    padding-left: 200px;
+    position: relative;
   }
 
   .right-sidebar-container {
@@ -510,7 +512,10 @@ header div.container.header {
   }
 
   .left-sidebar-container {
-    padding-right: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
 
     aside.explore-left-sidebar {
       background: rgba(0,0,0,.03);
