--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -349,7 +349,8 @@ header div.container.header {
     //width: 80%;
     width: 100%;
     float: left;
-    padding-left: 200px;
+    padding-left: 270px;
+    padding-right: 70px;
     position: relative;
   }
 
@@ -515,7 +516,8 @@ header div.container.header {
     position: absolute;
     top: 0;
     left: 0;
-    width: 200px;
+    width: 270px;
+    padding: 0 30px 0 15px;
 
     aside.explore-left-sidebar {
       background: rgba(0,0,0,.03);
