explore page - current cat / sub / secondSub - menu & title

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -563,7 +563,7 @@ header div.container.header {
           }
           ul {
             border-left: 2px solid #ccc;
-            padding:0;
+            padding:15px 0 0 15px;
           }
         }
       }
@@ -573,6 +573,12 @@ header div.container.header {
   .main-content {
     padding-left: 15px;
     padding-right: 0;
+
+    .explore-page-category-title {
+      h2 {
+        margin-top: 0;
+      }
+    }
   }
 
 }
@@ -677,7 +683,7 @@ header div.container.header {
   }*/
 
   #explore-page {
-    .main-content-container {
+    /*.main-content-container {
       width: 75%;
       float: left;
     }
@@ -685,7 +691,7 @@ header div.container.header {
     .right-sidebar-container {
       width: 25%;
       float: right;
-    }
+    }*/
   }
 
 }
@@ -714,7 +720,7 @@ header div.container.header {
   }
 
   #explore-page {
-    .main-content-container {
+    /*.main-content-container {
       width: 75%;
       float: left;
     }
@@ -722,7 +728,7 @@ header div.container.header {
     .right-sidebar-container {
       width: 25%;
       float: right;
-    }
+    }*/
   }
 
 }
