--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -578,6 +578,10 @@ header div.container.header {
       h2 {
         margin-top: 0;
       }
+      small {
+        font-weight: 500;
+        font-size: 16px;        
+      }
     }
   }
 
