explore page products infinite scroll

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -166,6 +166,19 @@ header div.container.header {
     }
   }
 
+  .product-group-scroll-wrapper {
+    .product-group-scroll-loading-container {
+      width: 100%;
+      float: left;
+      padding: 20px 0;
+      
+      .icon-wrapper {
+        display: table;
+        margin: 0 auto;
+      }
+    }
+  }
+
   #pagination-container {
     text-align: center;
 
@@ -580,7 +593,7 @@ header div.container.header {
       }
       small {
         font-weight: 500;
-        font-size: 17px;        
+        font-size: 17px;
       }
     }
   }
