--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -59,7 +59,7 @@ header div.container.header {
           span {
             position: absolute;
             bottom: 5px;
-            left: 15px;
+            left: 0;
             font-weight: 500;
             color: black;
             overflow: hidden;
@@ -67,7 +67,9 @@ header div.container.header {
             text-overflow: ellipsis;
             line-height: 1.2;
             font-weight: 500 !important;
-            width: 80%;
+            width: 100%;
+            padding: 0 10px;
+            text-align: center;
           }
 
           img {
