--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -61,7 +61,7 @@ header div.container.header {
             bottom: 5px;
             left: 0;
             font-weight: 500;
-            color: black;
+            color: #636363;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
