--- a/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
+++ b/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
@@ -24,7 +24,7 @@ $this->supporters = $modelInfo->getNewActiveSupporters(9);
 ?>
 
         <div class="downloadDiv" >
-            <a href="https://www.opendesktop.org/p/1175480/" target="_blank"><img src="/images/system/ocsstore-download-button.png" /></a>
+            <a href="https://www.opendesktop.org/p/1175480/"><img src="/images/system/ocsstore-download-button.png" /></a>
         </div>
 
         <div  class="supportDiv  withborder" >    
