product page start

--- a/application/modules/default/views/scripts/product/index-new.phtml
+++ b/application/modules/default/views/scripts/product/index-new.phtml
@@ -104,6 +104,7 @@ $this->headLink()->appendStylesheet('/theme/react/assets/css/style.css');
 <script type="text/javascript" src="/theme/react/lib/timeago/timeago.min.js"></script>
 
 <script type="text/javascript">
+  var product = <? json_encode($this->product) ?>
   var view = "product";
 </script>
 <script type="text/javascript" src="/theme/react/all.js"></script>
