bugfix: file tags

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -558,6 +558,11 @@ $packagetypeListHelper = new Default_View_Helper_FetchPackagetypeTags();
 
                                      var licenseId = '';
                                      var license = '';
+                                     var architectureId = '';
+                                     var packagetypeId = '';
+                                     
+                                     
+                                     
                                      if (this.tags) {
                                          fileTags = this.tags;
                                          $.each(fileTags.split(','), function () {
